--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
         "dev": "vite"
     },
     "dependencies": {
+        "@flux-ui/core": "^0.0.5",
         "@tailwindcss/vite": "^4.0.7",
         "admin-lte": "^4.0.0-beta3",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
+        "bootstrap": "^5.3.3",
+        "bootstrap-icons": "^1.11.3",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
+        "sass-embedded": "^1.85.1",
         "tailwindcss": "^4.0.7",
         "vite": "^6.0"
     },
