--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.10.1",
         "league/csv": "^9.21.0",
         "livewire/flux": "^2.0",
-        "livewire/volt": "^1.6"
+        "livewire/volt": "^1.6",
+        "srmklive/paypal": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
