--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^1.7.4",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
+        "choices.js": "^11.0.6",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "sass-embedded": "^1.85.1",
