--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "bootstrap-icons": "^1.11.3",
         "choices.js": "^11.0.6",
         "concurrently": "^9.0.1",
+        "firebase": "^11.4.0",
         "laravel-vite-plugin": "^1.0",
         "sass-embedded": "^1.85.1",
         "tailwindcss": "^4.0.7",
