Add chat syatem(base)

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/auth": "^1.46",
         "kreait/laravel-firebase": "^6.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
