--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,14 @@
     "require": {
         "php": "^8.2",
         "google/auth": "^1.46",
+        "guzzlehttp/guzzle": "^7.9",
         "kreait/laravel-firebase": "^6.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "league/csv": "^9.21.0",
         "livewire/flux": "^2.0",
+        "livewire/livewire": "^3.6",
         "livewire/volt": "^1.6",
         "srmklive/paypal": "^3.0"
     },
