--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/apiclient": "^2.18",
         "google/auth": "^1.46",
         "guzzlehttp/guzzle": "^7.9",
         "kreait/laravel-firebase": "^6.0",
