--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "concurrently": "^9.0.1",
         "firebase": "^11.4.0",
         "laravel-vite-plugin": "^1.0",
+        "overlayscrollbars": "^2.11.1",
         "sass-embedded": "^1.85.1",
         "tailwindcss": "^4.0.7",
         "vite": "^6.0"
